# bonk

./: .gitignore  Cargo.toml  LICENSE  README.md  bonk.json
.github/workflows/: release.yml
src/: main.rs
