[package]
name = "bonky"
version = "0.4.0"
edition = "2021"
authors = ["Elliot40404"]
description = "The blazingly fast touch alternative written in rust. Made for the sole purpose to create files."
license = "MIT"
repository = "https://github.com/elliot40404/bonk"
homepage = "https://github.com/elliot40404/bonk"
readme = "README.md"
keywords = ["touch", "create", "file", "directory", "mkdir"] 
categories = ["command-line-utilities", "development-tools"]
exclude = ['bonk.png']

[[bin]]
name = "bonk"
path = "src/main.rs"

[dependencies]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
